--- a/src/styles/Examples.css
+++ b/src/styles/Examples.css
@@ -6,8 +6,6 @@
     width: 90%;
     gap: 0.2rem;
     padding-left: 0.5rem;
-    /* margin-bottom: 15.5rem; */
-    margin-top: 1rem;
 }
   
 .App-main-right-examples-title {
@@ -36,7 +34,7 @@
 }
 
 .examples-button {
-    background: #4b6199;
+    background: #5875BF;
     color: white;
     font-family: inherit;
     padding: 0.3em;
@@ -100,7 +98,7 @@
     width: 40px;
     height: 40px;
     border: 1px solid #333;
-    background: #4b6199;
+    background: #5B9279;
     border-radius: 25px;
     overflow: hidden;
     position: relative;
