--- a/src/styles/Workspaces.css
+++ b/src/styles/Workspaces.css
@@ -236,5 +236,63 @@
     border-radius: 3rem;
     display: flex;
     align-items: center;
-    /* margin-left: 0.5rem; */
+}
+
+@media screen and (max-width: 1280px) {
+    .workspace-main {
+        width: 100%;
+        position: static; 
+    }
+
+    .App-main-left-header {
+        padding: 0.5rem;
+    }
+
+    .App-main-left-header-title {
+        font-size: 1.2rem;
+    }
+
+    .App-main-left-header-button,
+    .App-main-left-header-close {
+        font-size: 2rem;
+    }
+
+    .workspaces {
+        max-height: 60%;
+    }
+
+    .workspaces-workspace-placeholder {
+        height: 30rem;
+    }
+
+    .workspaces-workspace {
+        padding: 0.6rem 0rem;
+    }
+
+    .workspaces-workspace.active {
+        padding: 0.6rem 0rem;
+    }
+
+    .workspaces-workspace-name {
+        font-size: 1rem;
+    }
+
+    .workspaces-workspace-name input {
+        font-size: 1rem;
+    }
+
+    .App-main-left-bottom-button {
+        font-size: 1.2rem;
+        padding: .6rem 0rem;
+    }
+
+    .App-main-left-bottom-button .feather {
+        width: 1.6rem;
+        height: 1.4rem;
+    }
+
+    .App-main-left-footer-text {
+        font-size: 1rem;
+        padding: .3rem .5rem;
+    }
 }
