--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -139,7 +139,7 @@
 }
 
 .upload-button {
-  background-color: #5B9279;
+  background-color: #51ab60;
   padding: 0.6rem 1.3rem;
   color: white;
   cursor: pointer;
@@ -153,10 +153,11 @@
   display: flex;
   align-items: center;
   box-shadow: 0em .1em 3em #7497F314, 0em 0.4em 0.6em #000000c0;
+  animation: fadeInUp 0.5s ease-out both;
 }
 
 .upload-button:hover {
-  background-color: #5B9279cf;
+  background-color: #51ab60cf;
 }
 
 .upload.feather {
@@ -211,5 +212,31 @@
     position: absolute;
     left: 0;
     width: 100%;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .App-main-left {
+    background-color: #313131;
+  }
+
+  .App-main-right {
+    background-color: #f5f5f5;
+  }
+
+  .App-main-right-header-title {
+    color: #333;
+  }
+
+  .App-main-right-header-title-span {
+    color: #333;
+  }
+
+  .App-main-footer-text {
+    color: #333;
+  }
+
+  .upload-button {
+    background-color: #60bb70;
   }
 }
