--- a/src/styles/Examples.css
+++ b/src/styles/Examples.css
@@ -138,7 +138,7 @@
 }
 
 .icon-btn:hover {
-    background-color: #51ab60af;
+    background-color: #51ab60ef;
 }
 
 .add-btn:hover {
@@ -151,18 +151,18 @@
     content: "";
     position: absolute;
     height: 3px;
-    width: 13px;
-    top: calc(50% - 1.5px);
-    background: #ddd;  
+    width: 16px;
+    top: calc(50% - 1px);
+    background: white;  
 }
   
 .add-btn::after {
-    right: 14px;
+    right: 15px;
     overflow: hidden;
 }
   
 .add-btn::before {
-    left: 14px;
+    left: 15px;
 }
   
 .icon-btn:focus {
@@ -173,8 +173,6 @@
     color: #ddd;
     font-size: 1.1rem;
     font-weight: 500;
-    /* padding: 1rem 0rem; */
-
     opacity: 0;
     transition: opacity 0.2s;
 }
@@ -182,7 +180,6 @@
 .add-btn:hover::before,
 .add-btn:hover::after {
     width: 5%;
-    /* border-radius: 2px; */
     background: transparent;
 }
   
@@ -195,20 +192,20 @@
     transition: all 0.2s ease-in-out;
     content: "";
     position: absolute;
-    height: 16px;
+    height: 20px;
     width: 3px;
-    top: calc(50% - 8px);
+    top: calc(50% - 9px);
     background: white;
     overflow: hidden;
 }
   
 .add-icon::before {
-    left: 10px;
+    left: 18px;
     background: transparent;
 }
   
 .add-icon::after {
-    right: 17px;
+    right: 18px;
 }
   
 .add-btn:hover .add-icon::before {
@@ -228,9 +225,41 @@
     .examples-button {
         background: #5c77c1;
         color: #fff;
+        box-shadow: 0em 1em 3em #7497F334, 0em 0.4em 0.6em #00000060;
+    }
+
+    .examples-button:hover {
+        box-shadow: 0em 1em 3em #7497F364, 0em 0.4em 0.6em #000000f0;
     }
 
     .icon-btn {
         background: #60bb70;
+        box-shadow: 0em 1em 3em #7497F334, 0em 0.4em 0.6em #00000070;
+    }
+
+    .App-main-right-examples-title {
+        color: #333;
+    }
+}
+
+@media (max-width: 768px) {
+    .App-main-right-examples {
+        flex-direction: column;
+        align-items: center;
+        width: 105%;
+        padding-left: 0rem;
+    }
+
+    .App-main-right-examples-buttons {
+        width: 100%;
+        gap: 0em;
+        margin-bottom: 0.1rem;
+    }
+
+    .examples-button {
+        width: 100%;
+        margin-bottom: 1em;
+        font-size: .9em;
+        padding: 1.2em 1.5em;
     }
 }
