--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,7 @@
   min-height: 100vh;
   max-height: 100vh;
   background-color: #232323;
+  position: relative;
 }
 
 .overlay {
@@ -26,7 +27,7 @@
   max-height: 100vh;
   background-color: #232323;
   position: relative;
-  /* position: fixed; */
+  z-index: 100;
 }
 
 .App-main-left.closed {
@@ -42,7 +43,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* overflow-y: auto; */
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-width: none;
@@ -55,6 +55,60 @@
 
 .App-main-right.full-width {
   width: 100%;
+}
+
+.App-main-right.half-width {
+  width: 50%;
+}
+
+@media (max-width: 2000px) {
+  .App-main-left {
+    width: 14%;
+  }
+
+  .App-main-right {
+    width: 86%;
+  }
+}
+
+@media (max-width: 1800px) {
+  .App-main-left {
+    width: 15%;
+  }
+
+  .App-main-right {
+    width: 85%;
+  }
+}
+
+@media (max-width: 1600px) {
+  .App-main-left {
+    width: 16%;
+  }
+
+  .App-main-right {
+    width: 84%;
+  }
+}
+
+@media (max-width: 1400px) {
+  .App-main-left {
+    width: 18%;
+  }
+
+  .App-main-right {
+    width: 82%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .App-main-left {
+    width: 20%;
+  }
+
+  .App-main-right {
+    width: 80%;
+  }
 }
 
 .sidebar-open-btn {
@@ -79,7 +133,6 @@
   justify-content: center;
   width: 100%;
   gap: 0.5rem;
-  /* border: 1px solid red; */
 }
 
 .App-main-output {
@@ -135,7 +188,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 0.2rem;
 }
 
 .upload-button {
@@ -202,16 +255,47 @@
 }
 
 @media (max-width: 768px) {
+  .App {
+    min-height: 100vh;
+    min-width: 100vw;
+  }
   .App-main-left {
-    display: none;
     width: 100%;
-    height: 20vh;
   }
 
   .App-main-right {
-    position: absolute;
-    left: 0;
     width: 100%;
+  }
+
+  .App-main-right.half-width {
+    width: 0%;
+  }
+
+  .App-main-output-content {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  .App-main-output-content-left {
+    width: 150%;
+  }
+
+  .App-main-output-content-right {
+    width: 100%;
+  }
+
+  .App-main-output-content-right-inputs {
+    width: 95%;
+    gap: .7rem;
+  }
+
+  .sidebar-open-btn {
+    top: .7rem;
+    left: .7rem;
+    /* z-index: 100; */
   }
 }
 
@@ -238,5 +322,10 @@
 
   .upload-button {
     background-color: #60bb70;
+    box-shadow: 0em .1em 3em #7497F314, 0em 0.4em 0.6em #00000060;
+  }
+
+  .sidebar-open-btn {
+    color: #333;
   }
 }
