--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -1,23 +1,3 @@
-/* .loader-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.loader {
-  display: flex;
-  padding: .1rem .5rem;
-  border-radius: 2rem;
-} */
-
-.loader-text {
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: #eee;
-  margin-top: 1rem;
-}
-
 .boxes {
     --size: 35px;
     --duration: 800ms;
@@ -105,13 +85,6 @@
     --glowColor: #6a91f320;
     --rotateX: -90deg;
 }
-  
-/* .boxes .box > div:nth-child(4) {
-    --background: #7ba0fd;
-    --top: 0;
-    --left: 0;
-    --translateZ: calc(var(--size) * 3 * -1);
-} */
   
 @-webkit-keyframes box1 {
     0%, 50% {
@@ -207,4 +180,21 @@
     100% {
       transform: translate(100%, 100%);
     }
+}
+
+@media (prefers-color-scheme: light) {
+  .boxes .box > div {
+    --background: #4277ff;
+    --glowColor: #6a91f30a;
+  }
+  
+  .boxes .box > div:nth-child(2) {
+    --background: #4277ff;
+    --glowColor: #6a91f310;
+  }
+  
+  .boxes .box > div:nth-child(3) {
+    --background: #4277ff;
+    --glowColor: #6a91f320;
+  }
 }
