--- a/src/styles/SignUpModal.css
+++ b/src/styles/SignUpModal.css
@@ -1,7 +1,7 @@
 .big-modal {
     position: fixed;
     top: 40%;
-    left: 58%;
+    left: 50%;
     transform: translate(-50%, -50%);
     width: 55vw;
     height: 60vh;
@@ -14,6 +14,10 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0 20px 30px rgba(0,0,0,0.2);
+}
+
+.big-modal.sidebar-open {
+    left: 58%;
 }
 
 .big-modal-inner {
@@ -151,13 +155,83 @@
 .small-modal {
     position: fixed;
     top: 40%;
-    left: 58%;
+    left: 50%;
     transform: translate(-50%, -50%);
     width: 35vw;
     background-color: #333;
     border-radius: 10px;
     overflow: hidden;
     z-index: 1000;
+}
+
+.small-modal.sidebar-open {
+    left: 58%;
+}
+
+.error-modal {
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #333;
+    border-radius: 10px;
+    overflow: hidden;
+    z-index: 1000;
+}
+
+.error-modal.sidebar-open {
+    left: 58%;
+}
+
+.error-modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: .5rem;
+}
+
+.error-modal-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%; 
+    padding-bottom: .1rem;
+    gap: 0rem;
+}
+
+.error-modal-body-text {
+    text-align: center;
+    max-width: 75%;
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #aaa;
+    padding: 0;
+    margin: 0.5rem;
+    cursor: pointer;
+}
+
+.error-image {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FEE2E2;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 9999px;
+
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.error-image svg {
+    color: #DC2626;
+    width: 3.5rem;
+    height: 3.5rem;
 }
 
 .small-modal-content {
@@ -263,6 +337,18 @@
     width: 100%;
     padding: 0rem;
     margin: -2rem;
+}
+
+.small-modal-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* width: 100%;  */
+    padding: 1rem;
+    gap: 1rem;
+    /* background-color: #232323; */
+    border-radius: 20px;
 }
 
 .small-modal-title {
@@ -553,6 +639,48 @@
 @media screen and (max-width: 768px) {
     .small-modal {
         width: 90vw;
+    }
+
+    .small-modal.sidebar-open {
+        left: 50%;
+    }
+
+    .error-modal {
+        width: 90vw;
+    }
+
+    .error-modal.sidebar-open {
+        left: 50%;
+    }
+
+    .big-modal {
+        width: 100vw;
+        max-width: 90vh;
+    }
+
+    .big-modal-inner {
+        width: 80vw;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-left: 3rem;
+        /* right: 0; */
+    }
+
+    .big-modal-left {
+        width: 100vw;
+    }
+
+    .big-modal-right {
+        width: 80vw;
+    }
+
+    .big-modal-content {
+        width: 90vw;
+    }
+
+    .big-modal.sidebar-open {
+        left: 50%;
     }
 
     .input-field-container input {
