--- a/src/styles/TypingText.css
+++ b/src/styles/TypingText.css
@@ -3,7 +3,7 @@
     to {opacity: 0.0;}
 }
 
-p {
+.loader-outer-container p {
     display: inline-block;
     margin: 0;
     font-size: 1.25rem;
@@ -13,7 +13,7 @@ p {
     margin-top: 2em;
 }
 
-p:after {
+.loader-outer-container p:after {
     content: '|';
     display: inline;
     animation-name: blinker;
