Day 4 Inital (Clean up)

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -176,11 +176,11 @@
 
 .App-main-output-content-right-inputs {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 101%;
-  gap: 1rem;
+  width: 105%;
+  gap: .5rem;
 }
 
 .upload {
@@ -189,11 +189,12 @@
   align-items: center;
   justify-content: center;
   gap: 0.2rem;
+  width: 30%;
 }
 
 .upload-button {
   background-color: #51ab60;
-  padding: 0.6rem 1.3rem;
+  padding: 0.9rem 1.4rem;
   color: white;
   cursor: pointer;
   display: flex;
@@ -217,6 +218,17 @@
   stroke: white;
 }
 
+@media (max-width: 1200px) {
+  .App-main-output-content-right-inputs {
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  .upload {
+    width: 100%;
+  }
+}
 
 .App-main-right-header-title {
   font-size: 2.2rem;
@@ -322,7 +334,7 @@
 
   .upload-button {
     background-color: #60bb70;
-    box-shadow: 0em .1em 3em #7497F314, 0em 0.4em 0.6em #00000060;
+    box-shadow: 0em .1em 3em #7497F314, 0em 0.4em 0.6em #00000030;
   }
 
   .sidebar-open-btn {
